--- a/index.html
+++ b/index.html
@@ -1,77 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets.css">
-    <title>Daniel T. Juarez</title>  
+    <title>Daniel T. Juarez</title>
 </head>
+
 <body class="body">
-  
+
     <header class="nav-container">
         <h1>
-          Daniel T. Juarez
+            Daniel T. Juarez
         </h1>
-          <nav>
+        <nav>
             <h2>
-    <div class="topnav">
-      <ul>
-        <li><a href="#about-me">About Me</a></li>
+                <div class="topnav">
+                    <ul>
+                        <li><a href="#about-me">About Me</a></li>
 
-        <li><a href="#work">Projects</a></li>
+                        <li><a href="#work">Projects</a></li>
 
-        <li><a href="#contact-me">Contact Me</a></li>
-      </ul>
-    </div>
-    </h2> 
-          </nav>
-    </header> 
-    
-<div class="grid-container-1">
-    <section id="about-me"> 
-        <img class="img zoom" src="./assets/pictures/candid_office_pic.jpg" alt="Candid Office Picture" />
-          <div class="about-me">
-            <h3>About Me</h3>
-              <div class="paragraph">
-                <p class="text1">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
-          </div>   
-    </section>
+                        <li><a href="#contact-me">Contact Me</a></li>
+                    </ul>
+                </div>
+            </h2>
+        </nav>
+    </header>
 
-<div class="grid-container-2">
-    <section id="work">
-      <div class="work">
-        <h3>Work</h3>
-          <div class="iframe-div zoom">
-            <iframe src="Danno26.github.io"></iframe> 
-            <iframe src="Danno26.github.io"></iframe>
-          </div>
-      </div>
-    </section>
-</div>
+    <div class="grid-container-1">
+        <section id="about-me">
+            <img class="img zoom" src="./assets/pictures/candid_office_pic.jpg" alt="Candid Office Picture" />
+            <div class="about-me">
+                <h3>About Me</h3>
+                <div class="paragraph">
+                    <p class="text1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+            </div>
+        </section>
 
-<div class="grid-container-3">
-    <section id="contact-me">
-      <div  class="contact-me">
-      <h3>Contact Me</h3>
-      <div class="form-info">
-        <p>Fill out the form and I will contact you at my earliest convenience!</p>
-          <form>
-            <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"><br>
-            <label for="email">Enter email address:</label>
-            <input type="text" placeholder="Email Address" name="email" id="email" class="form-input"><br>
-            <label for="phone">Enter a telephone number:</label>
-            <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
-          </form>
-      </div>
-    </div> 
-    </section>
-</div>
+        <div class="grid-container-2">
+            <section id="work">
+                <div class="work">
+                    <h3>Work</h3>
+                    <div class="iframe-div zoom">
+                        <iframe src="Danno26.github.io"></iframe>
+                        <iframe src="Danno26.github.io"></iframe>
+                    </div>
+                </div>
+            </section>
+        </div>
 
-    </body>
+        <div class="grid-container-3">
+            <section id="contact-me">
+                <div class="contact-me">
+                    <h3>Contact Me</h3>
+                    <div class="form-info">
+                        <p>Fill out the form and I will contact you at my earliest convenience!</p>
+                        <form>
+                            <label for="name">Enter full name:</label>
+                            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"><br>
+                            <label for="email">Enter email address:</label>
+                            <input type="text" placeholder="Email Address" name="email" id="email" class="form-input"><br>
+                            <label for="phone">Enter a telephone number:</label>
+                            <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+</body>
 <footer>
 </footer>
+
 </html>
