fixed navbar to scroll with background image

--- a/index.html
+++ b/index.html
@@ -10,38 +10,30 @@
 
 <body class="body">
     <header class="nav-container">
-        <nav class="navbar">
-            <h1>
-                Daniel T. Juarez
-            </h1>
-
-            <div class="topnav">
-                <h2>
-                    <ul class="nav">
-                        <li><a href="jumbotron">Home</a></li>
-                        <li><a href="#about-me">About Me</a></li>
-
-                        <li><a href="#work">Projects</a></li>
-
-                        <li><a href="#contact-me">Contact Me</a></li>
-                    </ul>
-                </h2>
-            </div>
+        <nav class="scroll">
+            <span>Daniel T. Juarez</span>
+            <ul class="nav">
+                <li><a href="jumbotron">Home</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Projects</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+            </ul>
         </nav>
         </div>
     </header>
-
+    <section class="jumbotron">
+        <img class="img zoom" src="./assets/pictures/candid_office_pic.jpg" alt="Candid Office Picture" />
+    </section>
     <div class="grid-container-1">
+
         <section id="about-me">
-            <img class="img zoom" src="./assets/pictures/candid_office_pic.jpg" alt="Candid Office Picture" />
             <div class="about-me">
 
                 <div class="paragraph">
                     <p class="text1">
-                        <center>
-                            <br class='about-me-para'>What's up and welcome to my portfolio!<br> I'm Daniel and I'm based in Pasadena, California(for now). <br>I am a beginner software developer and am always learning everyday. If I'm not solving a problem
-                            I feel like I am not being productive with my life. I've worked in various high stress environments that have problems that require immediate attention. I am single, have no kids or pets and love to travel. I am easy going
-                            and easy to get along with, feel free to contact me if you have any questions!</center>
+                        <br>What's up and welcome to my portfolio!<br> I'm Daniel and I'm based in Pasadena, California(for now). <br>I am a beginner software developer and am always learning everyday. If I'm not solving a problem I feel like I am not
+                        being productive with my life. I've worked in various high stress environments that have problems that require immediate attention. I am single, have no kids or pets and love to travel. I am easy going and easy to get along with,
+                        feel free to contact me if you have any questions!
                     </p>
                 </div>
             </div>
