fixed nav bar and banner background

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="scroll">
             <span>Daniel T. Juarez</span>
             <ul class="nav">
-                <li><a href="jumbotron">Home</a></li>
+                <li><a href="#bannerImage">Home</a></li>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Projects</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
@@ -21,21 +21,18 @@
         </nav>
         </div>
     </header>
-    <section class="jumbotron">
+    <section class="banner" id="bannerImage">
         <img class="img zoom" src="./assets/pictures/candid_office_pic.jpg" alt="Candid Office Picture" />
     </section>
-    <div class="grid-container-1">
 
-        <section id="about-me">
+    <div id="about-me" class="grid-container-1">
+        <section>
             <div class="about-me">
-
-                <div class="paragraph">
-                    <p class="text1">
-                        <br>What's up and welcome to my portfolio!<br> I'm Daniel and I'm based in Pasadena, California(for now). <br>I am a beginner software developer and am always learning everyday. If I'm not solving a problem I feel like I am not
-                        being productive with my life. I've worked in various high stress environments that have problems that require immediate attention. I am single, have no kids or pets and love to travel. I am easy going and easy to get along with,
-                        feel free to contact me if you have any questions!
-                    </p>
-                </div>
+                <p class="text1">
+                    <br>What's up and welcome to my portfolio!<br> My name is Daniel and my currect goal is to move to NYC to live and work. <br>I am a beginner software developer and am always learning everyday. If I'm not solving a problem I feel like
+                    I am not being productive with my life. I've worked in various high stress fast paced environments that have problems that require immediate attention. I am single, have no kids or pets and love to travel. I am easy going and easy
+                    to get along with, feel free to contact me if you have any questions!
+                </p>
             </div>
         </section>
     </div>
@@ -71,7 +68,7 @@
                 </div>
                 <br>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">What is this regarding?</label>
+                    <label for="exampleFormControlTextarea1" class="form-label">Questions, comments, concerns?</label>
                     <textarea placeholder="Write a brief message." class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
             </form>
