updated / completed about me, banner and navbar

--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
         <section>
             <div class="about-me">
                 <p class="text1">
-                    <br>What's up and welcome to my portfolio!<br> My name is Daniel and my currect goal is to move to NYC to live and work. <br>I am a beginner software developer and am always learning everyday. If I'm not solving a problem I feel like
-                    I am not being productive with my life. I've worked in various high stress fast paced environments that have problems that require immediate attention. I am single, have no kids or pets and love to travel. I am easy going and easy
-                    to get along with, feel free to contact me if you have any questions!
+                    <h4 data-text="Welcome!">
+                        <br>
+
+                    </h4> My name is Daniel and my current goal is to move to NYC to live and work. If you're looking for a valuable asset to add to your team, look no further.
+                    <br>
+                    <br> I am a beginner software developer and am always learning everyday. I have a solid background & foundation in the sciences and maths as I've always found these topics super interesting due to their nature of having a soft ceiling.
+                    <br>I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress fast paced environments that have problems
+                    that require immediate attention. I am a firm believer that a proper amount of stress or urgency keeps people motivated and active. <br><br>A glimpse into my personal life: I am single, have no kids or pets and love to travel. I am
+                    easy going and easy to get along with. In my free time I like to work on creative projects. Feel free to contact me if you have any questions!
                 </p>
             </div>
         </section>
