updates on grid containers and contact me section

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <p class="text1">
                     <h4 data-text="Welcome!">
                         <br>
-
                     </h4> My name is Daniel and my current goal is to move to NYC to live and work. If you're looking for a valuable asset to add to your team, look no further.
                     <br>
-                    <br> I am a beginner software developer and am always learning everyday. I have a solid background & foundation in the sciences and maths as I've always found these topics super interesting due to their nature of having a soft ceiling.
-                    <br>I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress fast paced environments that have problems
-                    that require immediate attention. I am a firm believer that a proper amount of stress or urgency keeps people motivated and active. <br><br>A glimpse into my personal life: I am single, have no kids or pets and love to travel. I am
-                    easy going and easy to get along with. In my free time I like to work on creative projects. Feel free to contact me if you have any questions!
+                    <br> I am an amateur software developer and I'm always learning everyday. I have a solid foundation in the sciences and math as I've always found these topics greatly fascinating due to their nature of having a soft ceiling.
+                    <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that have problems
+                    that require immediate attention. I am a firm believer that a proper amount of stress or urgency keeps people motivated and active.
+                    <br>
+                    <br> A glimpse into my personal life: I am single, have no kids or pets and love to travel. I am easy going and easy to get along with. In my free time I like to work on creative projects. Feel free to contact me if you have any questions!
                 </p>
             </div>
         </section>
@@ -45,7 +45,7 @@
     <div class="grid-container-2">
         <section id="work">
             <div class="work">
-                <h3>Projects</h3>
+                <h1>Stuff I've worked on or have been working on:</h1>
                 <div class="iframe-div zoom">
                     <iframe src="Danno26.github.io"></iframe>
                     <iframe src="Danno26.github.io"></iframe>
@@ -56,27 +56,17 @@
 
     <div class="grid-container-3">
         <section id="contact-me">
-            <h3 class="contact-me">Contact Me</h3>
-            Fill out the form and I will contact you at my earliest convenience!
+            <h1 class="contact-me">Feel free to hit me up:</h1>
+            <h3>Dont worry!</h3>
+            <h5>
+                <p>I'm not paid by anyone to share your information. ;)</p>
+            </h5>
             <form class="form-info">
-                <div class="row">
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-                    </div>
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-                    </div>
-                </div><br>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" placeholder="name@example.com" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <br>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Questions, comments, concerns?</label>
-                    <textarea placeholder="Write a brief message." class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
+                <input type="text" class="form-control" placeholder="First and Last Name" required><br>
+                <label for="exampleInputEmail1" class="form-label" required>Email address</label><br>
+                <input type="email" placeholder="name@example.com"><br>
+                <div>Questions, comments, concerns?</div>
+                <textarea class="textarea" placeholder="Tell me what you have questions about!"></textarea>
             </form>
         </section>
     </div>
