--- a/index.html
+++ b/index.html
@@ -32,15 +32,10 @@
                     <h4 data-text="Welcome!">
                         <br>
                     </h4>
-                    <br>To obtain a career where I can apply my math, science and problem solving background in helping people with their future endeavors and assist them to better their lives knowledge in math and science. I am bilingual and customer
-                    services oriented and enjoy working with people.
-
-                    <br> I am an amateur software developer and I'm always learning everyday. I have a solid foundation in the sciences and math as I've always found these topics greatly fascinating due to their nature of having a soft ceiling.
-                    <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that have problems
-                    that require immediate attention. I am a firm believer that a proper amount of stress or urgency keeps people motivated and active.
-                    <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow.
-                    <br>My professional goals are simple – to become a part of a great organization and team where all my skills and talents are utilized to the fullest and to assist in my professional and personal growth whilst being challenged to always
-                    strive for better.
+                    <br> I am a software developer and I'm always learning everyday. I have a solid foundation in the sciences and math.
+                    <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that encounter
+                    problems that require immediate attention. I am a firm believer that a proper amount of stress or sense of urgency keeps people motivated and active.
+                    <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow from hands on leanring and great mentoring.
                     <br>
                 </p>
             </div>
@@ -51,8 +46,8 @@
             <div class="work">
                 <h1>Stuff I've worked on or have been working on:</h1>
                 <div class="iframe-div zoom">
-                    <iframe src="Danno26.github.io"></iframe>
-                    <iframe src="Danno26.github.io"></iframe>
+                    <iframe src="https://danno26.github.io/Password-Generator/"></iframe>
+                    <iframe src=""></iframe>
                 </div>
             </div>
         </section>
