--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
                     <br> I am a software developer and I'm always learning everyday. I have a solid foundation in the sciences and math.
                     <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that encounter
                     problems that require immediate attention. I am a firm believer that a proper amount of stress or sense of urgency keeps people motivated and active.
-                    <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow from hands on leanring and great mentoring.
+                    <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow from hands on learning and great mentoring.
                     <br>
                 </p>
             </div>
         </section>
     </div>
+
     <div class="grid-container-2">
         <section id="work">
             <div class="work">
                 <h1>Stuff I've worked on or have been working on:</h1>
                 <div class="iframe-div zoom">
-                    <iframe src="https://danno26.github.io/Password-Generator/"></iframe>
+                    <iframe class="Password-Generator" src="https://danno26.github.io/Password-Generator/" id="Iframe"></iframe>
+                    <br>
                     <iframe src=""></iframe>
                 </div>
             </div>
@@ -55,15 +57,17 @@
 
     <div class="grid-container-3">
         <section id="contact-me">
-            <h1 class="contact-me">Feel free to hit me up:</h1>
-            <h3>Dont worry!</h3>
-            <h5>
+            <h1>Feel free to hit me up: Dont worry!
+
                 <p>I'm not paid by anyone to share your information. ;)</p>
-            </h5>
+            </h1>
             <form class="form-info">
-                <input type="text" class="form-control" placeholder="First and Last Name" required><br>
-                <label for="exampleInputEmail1" class="form-label" required>Email address</label><br>
-                <input type="email" placeholder="name@example.com"><br>
+                <input type="text" class="form-control" placeholder="First and Last Name" required>
+                <br>
+                <label for="exampleInputEmail1" class="form-label" required>Email address</label>
+                <br>
+                <input type="email" placeholder="name@example.com">
+                <br>
                 <div>Questions, comments, concerns?</div>
                 <textarea class="textarea" placeholder="Tell me what you have questions about!"></textarea>
             </form>
