--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
     <div id="about-me" class="grid-container-1">
         <section>
             <div class="about-me">
-                <p class="text1">
-                    <h4 data-text="Welcome!">
-                        <br>
-                    </h4>
-                    <br> I am a software developer and I'm always learning everyday. I have a solid foundation in the sciences and math.
+                <h4 data-text="Welcome!">
+                    <br>
+                </h4>
+                <div class="color-overlay"> I am a software developer and I'm always learning everyday. I have a solid foundation in the sciences and math.
                     <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that encounter
                     problems that require immediate attention. I am a firm believer that a proper amount of stress or sense of urgency keeps people motivated and active.
                     <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow from hands on learning and great mentoring.
-                    <br>
-                </p>
+                </div>
             </div>
         </section>
     </div>
@@ -45,22 +43,22 @@
     <div class="grid-container-2">
         <section id="work">
             <div class="work">
-                <h1>Stuff I've worked on or have been working on:</h1>
+                <h3>Stuff I've worked on:</h3>
                 <div class="iframe-div zoom">
                     <iframe class="Password-Generator" src="https://danno26.github.io/Password-Generator/" id="Iframe"></iframe>
                     <br>
-                    <iframe src=""></iframe>
                 </div>
+                <div>What I'm currently working on:</div>
             </div>
         </section>
     </div>
 
     <div class="grid-container-3">
         <section id="contact-me">
-            <h1>Feel free to hit me up: Dont worry!
+            <h3>Feel free to hit me up: Dont worry!
 
                 <p>I'm not paid by anyone to share your information. ;)</p>
-            </h1>
+            </h3>
             <form class="form-info">
                 <input type="text" class="form-control" placeholder="First and Last Name" required>
                 <br>
