updating form box

--- a/index.html
+++ b/index.html
@@ -53,21 +53,19 @@
         </section>
     </div>
 
-    <div class="grid-container-3">
+    <div class="contact-box">
         <section id="contact-me">
             <h3>Feel free to hit me up: Dont worry!
 
                 <p>I'm not paid by anyone to share your information. ;)</p>
             </h3>
+            <br>
             <form class="form-info">
-                <input type="text" class="form-control" placeholder="First and Last Name" required>
-                <br>
-                <label for="exampleInputEmail1" class="form-label" required>Email address</label>
-                <br>
-                <input type="email" placeholder="name@example.com">
-                <br>
-                <div>Questions, comments, concerns?</div>
-                <textarea class="textarea" placeholder="Tell me what you have questions about!"></textarea>
+                <input type="text" class="input-field" placeholder="First and Last Name" required>
+                <input type="email" class="input-field" placeholder="name@example.com" required>
+                <input type="text" class="input-field" placeholder="Subject" required>
+                <textarea type="text" class="input-field text-area" placeholder="Tell me what you have questions about!" required></textarea>
+                <button type="button" class="btn">Send Message!</button>
             </form>
         </section>
     </div>
