--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                     <br>
                 </h4>
                 <div class="color-overlay">
-                    <h1>I am a software developer and I'm always learning everyday. I have a solid foundation in the sciences and math.
-                        <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I am not being productive with my life. I've worked in various high stress, fast paced environments that encounter
-                        problems that require immediate attention. I am a firm believer that a proper amount of stress or sense of urgency keeps people motivated and active.
-                        <br>As a self-taught developer I am looking for a place where I can compound on my current knowledge and grow from hands on learning and great mentoring.
+                    <h1>
+                        <p>Pronouns: He/Him <br>Pets: None yet <br>Status: Single <br>Location: Brooklyn, NY <br>Hobbies: Creative Projects or Outdoors Activities! <br>Interests: Tech/Science/Cosplay/MuayThai/Jiujitsu</p> <br> I am a junior developer and
+                        I'm always learning everyday. I have a solid foundation in the sciences and math.
+                        <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I'm not being productive enough with my time.
+                        <br>As some-what of a self-taught developer, I am looking for a place where I can compound on my current knowledge and grow from hands on learning and great mentoring!
                     </h1>
                 </div>
             </div>
@@ -49,7 +50,7 @@
             <div class="work color-overlay1">
                 <h3>Stuff I've worked on / Currently am working on:</h3>
                 <div class="iframe-div">
-                    <iframe class="Password-Generator" src="https://danno26.github.io/Password-Generator/" id="Iframe"></iframe>
+                    <iframe class="Password-Generator" src="https://danno26.github.io/Password-Generator/" id="Iframe">Password-Generator Project</iframe>
                     <br>
                 </div>
             </div>
