adjusting media queries

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -35,10 +35,10 @@
                 </h4>
                 <div class="color-overlay">
                     <h1>
-                        <p>Pronouns: He/Him <br>Pets: None yet <br>Status: Single <br>Location: Brooklyn, NY <br>Hobbies: Creative Projects or Outdoors Activities! <br>Interests: Tech/Science/Cosplay/MuayThai/Jiujitsu</p> <br> I am a junior developer and
-                        I'm always learning everyday. I have a solid foundation in the sciences and math.
+                        <p>Pronouns: He/Him <br>Location: New York City, NY <br>Hobbies: Creative Projects or Outdoors Activities! <br>Interests: Tech/ Science/ Cosplay/MuayThai/ Jiujitsu</p> <br> I am a novice developer and I'm always learning everyday.
+                        I have a solid foundation in the sciences and math.
                         <br> I enjoy getting up and getting going, I have a knack for staying active. If I'm not solving a problem I feel like I'm not being productive enough with my time.
-                        <br>As some-what of a self-taught developer, I am looking for a place where I can compound on my current knowledge and grow from hands on learning and great mentoring!
+                        <br>As some-what of a self-taught developer, I am looking for a company that will allow me to compound on my current skills and knowledge and continue to grow from hands on learning and mentoring.
                     </h1>
                 </div>
             </div>
@@ -60,9 +60,7 @@
     <div class="grid-container-3">
         <section id="contact-me">
             <div class="color-overlay2">
-                <h3> Feel free to hit me up: Dont worry!
-                    <p>I'm not paid by anyone to share your information.</p>
-                </h3>
+                <h3> Questions, comments, or concerns? Message me!</h3>
                 <br>
                 <form action="https://formspree.io/f/xoqygaav" class="form-info" method="POST">
                     <div class="form-group" id="my-form">
